--- a/regex.ipynb
+++ b/regex.ipynb
@@ -18,7 +18,7 @@
    "source": [
     "chat1 =  r\"this is my phone number 1234567890, and this is my email id prer123@gmail.com\"\n",
     "chat2 =  r\"here's my phone number 123-345-1234, and here's my email id prer123@gmail.com\"\n",
-    "chat3 =  r\"omg take my phone number, already T_T (123)-345-1534. and my email prer123@gmail.com\""
+    "chat3 =  r\"omg take my phone number (123)-345-1534. and my email prer123@gmail.com\""
    ]
   },
   {
